# xtensor-benchmark

./: CMakeLists.txt  readme.md
benchmark/: CMakeLists.txt  axpy.cpp  bench_container.cpp  laplacian_1D.cpp  laplacian_2D.cpp  laplacian_3D.cpp
benchmark/xsimd/: CMakeLists.txt  x_square_xtensor.cpp
